# HaskellPageRank

./: .gitignore  .gitmodules  .travis.yml  README.md  getData.sh  makeImage.sh  parseToLatex.sh  shell.nix
benchmarkparser/: Main.hs  benchmarkparser.cabal
executables/: ChangeLog.md  LICENSE  Main.hs  MainBench.hs  Test.hs  VectorOperations.hs  executables.cabal
executables/input/: 200nodes4color.txt  500nodes4color.txt  doubleSquareEA.txt  doubleSquareReversedEA.txt  rmatTest.txt  rmatTest3.txt
graphcoloring/: graphcoloring.cabal
graphcoloring/Data/Graph/: GraphColoring.hs  Prism.hs
graphcoloring/Test/: ColoringGraphs.hs  TestMain.hs
graphcoloring/Test/Data/Graph/: TestGraphColoring.hs  TestGraphColoring2Dist.hs  TestGraphColoringNonDet.hs  TestPrism.hs
internalutil/: internalutil.cabal
internalutil/Data/Graph/: EdgeArray.hs  NeighborGraph.hs
internalutil/Data/Util/: ArrayUtils.hs
internalutil/Graphviz/: GraphColoring.hs
internalutil/Test/: Graphs.hs  TestMain.hs
internalutil/Test/Data/Graph/: TestGraphParser.hs
pagerank/: pagerank.cabal
pagerank/Data/Graph/: InternalPageRank.hs  PageRank.hs  PageRankEC.hs  PageRankNonDet.hs  PageRankStep.hs  PageRankVC.hs  PageRankWithPreprocessing.hs
pagerank/Test/: PageRankGraphs.hs  TestMain.hs
pagerank/Test/Data/Graph/: TestPageRank.hs  TestPageRankEC.hs  TestPageRankNonDet.hs  TestPageRankPP.hs  TestPageRankStep.hs  TestPageRankVC.hs
