name:                executables
version:             0.1.0.0
synopsis:            meh
-- description:
homepage:            https://github.com/andsild/NEW_URL
license:             BSD3
license-file:        LICENSE
author:              Anders Sildnes
maintainer:          andsild@posteo.net
-- copyright:
category:            Concurrency
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

Flag debug
  Description: Enable debug logging
  Default:     False

benchmark executablesBench
  type:             exitcode-stdio-1.0
  main-is:          MainBench.hs
  other-modules: VectorOperations
  build-depends:    base
                    , bytestring
                    , containers
                    , criterion
                    , deepseq
                    , graphcoloring
                    , hashtables
                    , internalutil
                    , lvish
                    , pagerank
                    , parallel
                    , split
                    , vector
  if flag(debug)
      CC-Options: "-DDEBUG"
      CPP-Options: -DDEBUG
  default-language: Haskell2010

executable executables
  main-is:      Main.hs
  other-extensions:    BangPatterns, OverloadedStrings, ScopedTypeVariables, NamedFieldPuns
  ghc-options:         -fwarn-incomplete-patterns
  if flag(debug)
      CC-Options: "-DDEBUG"
      CPP-Options: -DDEBUG
  build-depends:       base
                       , MonadRandom
                       , bytestring
                       , cmdargs
                       , criterion
                       , deepseq
                       , graphcoloring
                       , internalutil
                       , pagerank
                       , time
                       , vector
  hs-source-dirs:      .
  default-language:    Haskell2010
