name:                pagerank
version:             0.1.0.0
synopsis:            meh
-- description:
homepage:            https://github.com/andsild/CHANGETITLE
license:             BSD3
license-file:        LICENSE
author:              Anders Sildnes
maintainer:          andsild@posteo.net
-- copyright:
category:            Concurrency
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

Flag debug
  Description: Enable debug support
  Default:     False

test-suite Gentest
  main-is: TestMain.hs
  other-modules:
   Data.Graph.InternalPageRank
   , Data.Graph.PageRank
   , Data.Graph.PageRankEC
   , Data.Graph.PageRankNonDet
   , Data.Graph.PageRankStep
   , Data.Graph.PageRankVC
   , Data.Graph.PageRankWithPreprocessing
   , Test.Data.Graph.TestPageRank
   , Test.Data.Graph.TestPageRankEC
   , Test.Data.Graph.TestPageRankNonDet
   , Test.Data.Graph.TestPageRankPP
   , Test.Data.Graph.TestPageRankStep
   , Test.Data.Graph.TestPageRankVC
   , Test.PageRankGraphs
  type: exitcode-stdio-1.0
  hs-source-dirs: Test, .
  build-depends:
    base
    , HUnit
    , bytestring
    , ghc-prim
    , graphcoloring
    , heredoc
    , internalutil
    , repa
    , vector
  default-language:    Haskell2010
  CC-Options: "-DDEBUG"
  CPP-Options: -DDEBUG

library
  other-extensions:    CPP, BangPatterns, OverloadedStrings, ScopedTypeVariables, NamedFieldPuns

  ghc-options:         -fwarn-incomplete-patterns
  if flag(debug)
      CC-Options: "-DDEBUG"
      CPP-Options: -DDEBUG
  hs-source-dirs: Data/Graph
  exposed-modules:
    Data.Graph.PageRank
    , Data.Graph.InternalPageRank
    , Data.Graph.PageRankNonDet
    , Data.Graph.PageRankStep
    , Data.Graph.PageRankWithPreprocessing
    , Data.Graph.PageRankEC
    , Data.Graph.PageRankVC
  build-depends:
    base
    , ghc-prim
    , graphcoloring
    , internalutil
    -- , lvish
    , repa
    , vector
  hs-source-dirs:      .
  default-language:    Haskell2010
